Fix wifi spacing

--- a/src/components/MapNavigation/MapNavigation.css
+++ b/src/components/MapNavigation/MapNavigation.css
@@ -213,6 +213,7 @@ input:focus {
 .wifiStatus {
     width: 3%;
     margin-right: 10px;
+    margin-left: 10px;
 }
 
 .airbagStatus {
